fix: Modificación railway.toml

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,8 +1,6 @@
 [build]
 builder = "NIXPACKS"
-
-[build.buildCommand]
-cmd = "mvn clean package -DskipTests"
+buildCommand = "mvn clean package -DskipTests"
 
 [deploy]
 startCommand = "java -jar target/*.jar"
