fix: corregir datasource para Railway

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,24 +1,23 @@
 # Server
-server.port=8080
+server.port=${PORT:8080}
 
-# Database - PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/concesionario_db
-spring.datasource.username=postgres
-spring.datasource.password=tu_password_aqui
+# Database
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
-jwt.secret=concesionario_jwt_secret_key_muy_larga_y_segura_2024_cambiar_en_produccion
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 # CORS
-cors.allowed-origins=http://localhost:5173,http://localhost:3000
+cors.allowed-origins=${FRONTEND_URL:http://localhost:5173}
 
 # Logging
 logging.level.com.concesionario=INFO
