--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -1,8 +1,6 @@
 [build]
 builder = "NIXPACKS"
-
-[build.buildCommand]
-cmd = "npm install && npm run build"
+buildCommand = "npm install && npm run build"
 
 [deploy]
 startCommand = "npx serve dist -p ${PORT:-3000}"
